--- a/templates/info.html
+++ b/templates/info.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-    <title>連番を簡単に生成！！</title>
+    <title>ゆずtube</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -28,7 +29,7 @@
         <div class="flex flex-col md:flex-row justify-between items-center space-y-4 md:space-y-0 md:space-x-8">
             <div class="text-center md:text-left">
                 <h1 class="text-4xl sm:text-5xl font-bold text-blue-400">Yuki Youtube</h1>
-                <p class="text-sm text-gray-400">necolian非公式改造版</p>
+                <p class="text-sm text-gray-400">ゆず改造インスタンス</p>
             </div>
             <div class="w-full md:w-1/2">
                 <form id="searchForm" class="w-full" action="/search" method="get">
@@ -77,3 +78,4 @@
     </script>
 </body>
 </html>
+
