--- a/templates/video.html
+++ b/templates/video.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-    <title>連番を簡単に作成！</title>
+    <title>ゆずtube</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -181,15 +182,7 @@
     <script>
         // サーバーリストを管理
         const servers = {
-            'server1': { name: 'Server1', url: 'https://inv-server-w268.vercel.app' },
-            'server2': { name: 'Server2', url: 'https://inv-server-x88u.vercel.app' },
-            'server3': { name: 'Server3', url: 'https://inv-server-odic.vercel.app' },
-            'server4': { name: 'Server4', url: 'https://inv-server-8ode.vercel.app' },
-            'server5': { name: 'Server5', url: 'https://inv-server-sfjw.vercel.app' },
-            'server6': { name: 'Server6', url: 'https://inv-server-u8ps.vercel.app' },
-            'server7': { name: 'Server7', url: 'https://inv-server-qudk.vercel.app' },
-            'server8': { name: 'Server8', url: 'https://inv-server-2j8x.vercel.app' },
-            'server9': { name: 'Server9', url: 'https://inv-server-woad.vercel.app' }
+            'server1': { name: 'Server1', url: 'https://inv-server-w268.vercel.app' }
         };
 
         // UI要素を取得
@@ -310,3 +303,4 @@
             });</script>
 </body>
 </html>
+
